add order by to get product list
