# docs/openapi.yaml
@@ -120,6 +120,14 @@ paths:
                   schema:
                     type: integer
                     format: int32
+                - name: orderBy
+                  in: query
+                  schema:
+                    type: string
+                - name: orderAscDesc
+                  in: query
+                  schema:
+                    type: string
             responses:
                 "200":
                     description: OK
